Project grid design edited.

--- a/pages/art.html
+++ b/pages/art.html
@@ -30,8 +30,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2024/2024_AURORA_Cover.jpg" alt="2024_AURORA_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024<br>Interactive Experience</div>
             <div class="project-title">AURORA</div>
+            <div class="project-subtitle">Interactive Experience<br>2024</div>
           </div>
         </div>
       </a>
@@ -39,8 +39,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2024/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024<br>Game Design</div>
             <div class="project-title">Hibiscus</div>
+            <div class="project-subtitle">Game Design<br>2024</div>
           </div>
         </div>
       </a>
@@ -48,8 +48,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2023/2023_Piru_Cover.jpg" alt="2023_Piru_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2023<br>3D Game Art</div>
             <div class="project-title">Piru</div>
+            <div class="project-subtitle">3D Game Art<br>2023</div>
           </div>
         </div>
       </a>
@@ -57,8 +57,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2023/2023_ColourAndPerception_Cover.jpg" alt="2023_ColourAndPerception_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2023<br>Colour Study</div>
             <div class="project-title">Colour and Perception</div>
+            <div class="project-subtitle">Colour Study<br>2023</div>
           </div>
         </div>
       </a>
@@ -66,8 +66,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2023/2023_SAD_Cover.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2023<br>Psychedelic Animations</div>
             <div class="project-title">SAD</div>
+            <div class="project-subtitle">Psychedelic Animations<br>2023</div>
           </div>
         </div>
       </a>
@@ -75,8 +75,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2022/2022_RDAC_Cover.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2022<br>Arduino Project</div>
             <div class="project-title">RD:AC</div>
+            <div class="project-subtitle">Arduino Project<br>2022</div>
           </div>
         </div>
       </a>
@@ -84,8 +84,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2021/2021_WatchOut_1.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2021<br>3D Art</div>
             <div class="project-title">Watch Out!</div>
+            <div class="project-subtitle">3D Art<br>2021</div>
           </div>
         </div>
       </a>
@@ -93,8 +93,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2021/2021_Sunrisepunk_4.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2021<br>3D Animation</div>
             <div class="project-title">Sunrisepunk</div>
+            <div class="project-subtitle">3D Animation<br>2021</div>
           </div>
         </div>
       </a>
@@ -102,8 +102,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2021/2021_BlueOdyssey_1.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2021<br>3D Game Trailer</div>
             <div class="project-title">Blue Odyssey</div>
+            <div class="project-subtitle">3D Game Trailer<br>2021</div>
           </div>
         </div>
       </a>
@@ -120,8 +120,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2018/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2018<br>3D Animation</div>
             <div class="project-title">Space Jellyfish</div>
+            <div class="project-subtitle">3D Animation<br>2018</div>
           </div>
         </div>
       </a>
@@ -129,8 +129,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2017/2017_M302_Cover.jpg" alt="2017_M302_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2017<br>Abstract Painting</div>
             <div class="project-title">M 3.02</div>
+            <div class="project-subtitle">Abstract Painting<br>2017</div>
           </div>
         </div>
       </a>
