--- a/pages/design.html
+++ b/pages/design.html
@@ -30,8 +30,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2024/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024<br>Volunteer Work</div>
             <div class="project-title">Contestations.AI</div>
+            <div class="project-subtitle">Volunteer Work<br>2024</div>
           </div>
         </div>
       </a>
@@ -39,8 +39,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2024/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024<br>Website for Grönlund-Nisunen</div>
             <div class="project-title">g-n.fi</div>
+            <div class="project-subtitle">Website for Grönlund-Nisunen<br>2024</div>
           </div>
         </div>
       </a>
@@ -48,26 +48,26 @@
         <div class="highlight-project">
           <img class="gallery" src="2024/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024<br>3D Design for J.C Muyonjo</div>
             <div class="project-title">Adungu & Engoma</div>
+            <div class="project-subtitle">3D Design for J.C Muyonjo<br>2024</div>
           </div>
         </div>
       </a>
-      <a href="2024/2024_marko_vuokola_nordea.html">
+      <!-- <a href="2024/2024_marko_vuokola_nordea.html">
         <div class="highlight-project">
           <img class="gallery" src="2024/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2024<br>Photo Editing for Marko Vuokola</div>
             <div class="project-title">Screen Installation<br>Concept Visualisation</div>
+            <div class="project-subtitle">Photo Editing for Marko Vuokola<br>2024</div>
           </div>
         </div>
-      </a>
+      </a> -->
       <a href="2023/2023_gn_843m3h.html">
         <div class="highlight-project">
           <img class="gallery" src="2023/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2023<br>3D Design for Grönlund-Nisunen</div>
             <div class="project-title">84,3 m3/h</div>
+            <div class="project-subtitle">3D Design for Grönlund-Nisunen<br>2023</div>
           </div>
         </div>
       </a>
@@ -75,8 +75,8 @@
         <div class="highlight-project">
           <img class="gallery" src="2022/2022_ForumMentoring_Brochure_Cover.jpg" alt="">
           <div class="text-box">
-            <div class="project-subtitle">2022<br>Brochure Design for Forum Mentoring eV</div>
             <div class="project-title">Quality Standard Brochure</div>
+            <div class="project-subtitle">Brochure Design for Forum Mentoring eV<br>2022</div>
           </div>
         </div>
       </a>
@@ -85,8 +85,8 @@
           <img class="gallery" src="2019/2019_more_about_robots_BusinessCard_2.jpg"
             alt="/2019_more_about_robots_BusinessCard_Cover">
           <div class="text-box">
-            <div class="project-subtitle">2019<br>Business Card for more_about_robots GmbH</div>
             <div class="project-title">Business Card</div>
+            <div class="project-subtitle">Business Card for more_about_robots<br>2019</div>
           </div>
         </div>
       </a>
