About text updated.

--- a/pages/about.html
+++ b/pages/about.html
@@ -50,7 +50,8 @@
           Lapland in Rovaniemi, Finland. During this time, I experienced the beauty of Finland's natural phenomena—the
           northern lights, the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a
           wonderful source of inspiration for colour and light in my artistic work. Conceptually, I like to explore
-          themes of nature, technology, and human emotion, often weaving narratives about the past and the future.
+          themes from nature, technology, and human emotions, often weaving narratives from fiction, personal
+          experiences, and cultural exchange.
           <br>
           <br>
           My favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
