--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -16,9 +16,9 @@
       <div class="logo"><a href="../index.html"><img src="../assets/logo.svg" alt=""></a></div>
       <div class="openMenu"><img src="../assets/menu_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       <ul class="mainMenu">
-        <li><a href="art.html">Art</a></li>
-        <li><a href="design.html">Design</a></li>
-        <li><a href="about.html" style="color: #fff;">About</a></li>
+        <li><a href="../art.html">Art</a></li>
+        <li><a href="../design.html">Design</a></li>
+        <li><a href="index.html" style="color: #fff;">About</a></li>
         <li>
           <a href="mailto:tino.selic@gmail.com" target="_blank"></a>
           <div class="button" id="contact">Contact</div>
