--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul class="mainMenu">
         <li><a href="pages/art.html">Art</a></li>
         <li><a href="pages/design.html">Design</a></li>
-        <li><a href="about/index.html">About</a></li>
+        <li><a href="pages/about/index.html">About</a></li>
         <li>
           <a href="mailto:tino.selic@gmail.com" target="_blank"></a>
           <div class="button" id="contact">Contact</div>
