Redirects cleaned up.

--- a/design/index.html
+++ b/design/index.html
@@ -5,28 +5,28 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="../assets/favicon.svg" />
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.svg" />
+  <link rel="stylesheet" href="/style.css" />
   <title>Tino Selić - Design</title>
 </head>
 
 <body>
   <header>
     <nav>
-      <div class="logo"><a href="../index.html"><img src="../assets/logo.svg" alt=""></a></div>
-      <div class="openMenu"><img src="../assets/add_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div>
+      <div class="logo"><a href="/"><img src="/assets/logo.svg" alt=""></a></div>
+      <div class="openMenu"><img src="/assets/add_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div>
       <ul class="mainMenu">
-        <li><a href="../art/index.html">Art</a></li>
-        <li><a href="index.html" style="color: #fff;">Design</a></li>
-        <li><a href="../about/index.html">About</a></li>
+        <li><a href="/art/">Art</a></li>
+        <li><a href="" style="color: #fff;">Design</a></li>
+        <li><a href="/about/">About</a></li>
         <li><div class="button" id="contact">Contact</div></li>
-        <div class="closeMenu"><img src="../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
+        <div class="closeMenu"><img src="/assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
     </nav>
   </header>
   <main>
     <div class="grid">
-      <a href="2024/contestations_ai/index.html">
+      <a href="2024/contestations_ai/">
         <div class="highlight-project">
           <img class="gallery" src="2024/contestations_ai/2024_ContestationsAI_4.jpg" alt="2024_ContestationsAI_Cover">
           <div class="text-box">
@@ -35,7 +35,7 @@
           </div>
         </div>
       </a>
-      <a href="2024/groenlund_nisunen/index.html">
+      <a href="2024/groenlund_nisunen/">
         <div class="highlight-project">
           <img class="gallery" src="2024/groenlund_nisunen/2024_GN_Website_Cover.jpg" alt="2024_GN_Website_Cover">
           <div class="text-box">
@@ -44,7 +44,7 @@
           </div>
         </div>
       </a>
-      <a href="2024/adungu_and_engoma/index.html">
+      <a href="2024/adungu_and_engoma/">
         <div class="highlight-project">
           <img class="gallery" src="2024/adungu_and_engoma/2024_Adungu_1.jpg" alt="2024_Adungu_Cover">
           <div class="text-box">
@@ -53,7 +53,7 @@
           </div>
         </div>
       </a>
-      <a href="2024/marko_vuokola/index.html">
+      <a href="2024/marko_vuokola/">
         <div class="highlight-project">
           <img class="gallery" src="2024/marko_vuokola/2024_MarkoVuokola_Nordea_1.jpg" alt="2024_MarkoVuokola_Nordea_Cover">
           <div class="text-box">
@@ -62,7 +62,7 @@
           </div>
         </div>
       </a>
-      <a href="2023/groenlund_nisunen/index.html">
+      <a href="2023/groenlund_nisunen/">
         <div class="highlight-project">
           <img class="gallery" src="2023/groenlund_nisunen/2023_GN_843m3h_Cover.jpg" alt="2023_GN_843m3h_Cover">
           <div class="text-box">
@@ -71,7 +71,7 @@
           </div>
         </div>
       </a>
-      <a href="2022/forum_mentoring/index.html">
+      <a href="2022/forum_mentoring/">
         <div class="highlight-project">
           <img class="gallery" src="2022/forum_mentoring/2022_ForumMentoring_Brochure_Cover.jpg" alt="">
           <div class="text-box">
@@ -80,7 +80,7 @@
           </div>
         </div>
       </a>
-      <a href="2019/more_about_robots/index.html">
+      <a href="2019/more_about_robots/">
         <div class="highlight-project">
           <img class="gallery" src="2019/more_about_robots/2019_more_about_robots_BusinessCard_2.jpg"
             alt="/2019_more_about_robots_BusinessCard_Cover">
@@ -93,7 +93,7 @@
     </div>
   </main>
   <footer id="copyright"></footer>
-  <script src="../app.js"></script>
+  <script src="/app.js"></script>
 </body>
 
 </html>
