--- a/about/index.html
+++ b/about/index.html
@@ -5,25 +5,25 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/x-icon" href="../assets/favicon.svg" />
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.svg" />
+  <link rel="stylesheet" href="/style.css" />
   <title>Tino Selić - About</title>
 </head>
 
 <body>
   <header>
     <nav>
-      <div class="logo"><a href="../index.html"><img src="../assets/logo.svg" alt=""></a></div>
-      <div class="openMenu"><img src="../assets/add_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div>
+      <div class="logo"><a href="/"><img src="/assets/logo.svg" alt=""></a></div>
+      <div class="openMenu"><img src="/assets/add_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div>
       <ul class="mainMenu">
-        <li><a href="../art/">Art</a></li>
-        <li><a href="../design/">Design</a></li>
-        <li><a href="../index.html" style="color: #fff;">About</a></li>
+        <li><a href="/art/">Art</a></li>
+        <li><a href="/design/">Design</a></li>
+        <li><a href="/about/" style="color: #fff;">About</a></li>
         <li>
           <a href="mailto:tino.selic@gmail.com" target="_blank"></a>
           <div class="button" id="contact">Contact</div>
         </li>
-        <div class="closeMenu"><img src="../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
+        <div class="closeMenu"><img src="/assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
     </nav>
   </header>
@@ -70,10 +70,10 @@
         </h2>
       </div>
       <!-- <div class="about-column-right">
-        <img src="../assets/Adungu_Isolated.png" alt="Adungo background sticker" id="adungu">
+        <img src="/assets/Adungu_Isolated.png" alt="Adungo background sticker" id="adungu">
         <br>
         <br>
-        <img src="../assets/Engoma_Isolated.png" alt="Adungo background sticker" id="engoma">
+        <img src="/assets/Engoma_Isolated.png" alt="Adungo background sticker" id="engoma">
       </div> -->
     </div>
     <br>
@@ -131,7 +131,7 @@
       </div>
       <div class="about-column-right">
         </h2>
-        <!-- <img src="../images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
+        <!-- <img src="/images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
         <br>
         <br>
         <br>
@@ -140,7 +140,7 @@
     </div>
   </main>
   <footer id="copyright"></footer>
-  <script src="../app.js"></script>
+  <script src="/app.js"></script>
 </body>
 
 </html>
