--- a/art/index.html
+++ b/art/index.html
@@ -13,12 +13,12 @@
 <body>
   <header>
     <nav>
-      <div class="logo"><a href="../index.html"><img src="../assets/logo.svg" alt=""></a></div>
+      <div class="logo"><a href="../"><img src="../assets/logo.svg" alt=""></a></div>
       <div class="openMenu"><img src="../assets/add_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div>
       <ul class="mainMenu">
-        <li><a href="index.html" style="color: #fff;">Art</a></li>
-        <li><a href="../design/index.html">Design</a></li>
-        <li><a href="../about/index.html">About</a></li>
+        <li><a href="../art/" style="color: #fff;">Art</a></li>
+        <li><a href="../design/">Design</a></li>
+        <li><a href="../about/">About</a></li>
         <li><div class="button" id="contact">Contact</div></li>
         <div class="closeMenu"><img src="../assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
@@ -26,7 +26,7 @@
   </header>
   <main>
     <div class="grid">
-      <a href="2024/aurora/index.html">
+      <a href="2024/aurora/">
         <div class="highlight-project">
           <img class="gallery" src="2024//aurora/2024_AURORA_Cover.jpg" alt="2024_AURORA_Cover">
           <div class="text-box">
@@ -35,7 +35,7 @@
           </div>
         </div>
       </a>
-      <a href="2024/hibiscus/index.html">
+      <a href="2024/hibiscus/">
         <div class="highlight-project">
           <img class="gallery" src="2024/hibiscus/2024_Hibiscus_Cover.jpg" alt="2024_Hibiscus_Cover">
           <div class="text-box">
@@ -44,7 +44,7 @@
           </div>
         </div>
       </a>
-      <a href="2023/piru/index.html">
+      <a href="2023/piru/">
         <div class="highlight-project">
           <img class="gallery" src="2023/piru/2023_Piru_Cover.jpg" alt="2023_Piru_Cover">
           <div class="text-box">
@@ -53,7 +53,7 @@
           </div>
         </div>
       </a>
-      <a href="2023/colour_and_perception/index.html">
+      <a href="2023/colour_and_perception/">
         <div class="highlight-project">
           <img class="gallery" src="2023/colour_and_perception/2023_ColourAndPerception_Cover.jpg" alt="2023_ColourAndPerception_Cover">
           <div class="text-box">
@@ -62,7 +62,7 @@
           </div>
         </div>
       </a>
-      <a href="2023/sad/index.html">
+      <a href="2023/sad/">
         <div class="highlight-project">
           <img class="gallery" src="2023/sad/2023_SAD_Cover.jpg" alt="">
           <div class="text-box">
@@ -71,7 +71,7 @@
           </div>
         </div>
       </a>
-      <a href="2022/rdac/index.html">
+      <a href="2022/rdac/">
         <div class="highlight-project">
           <img class="gallery" src="2022/rdac/2022_RDAC_Cover.jpg" alt="">
           <div class="text-box">
@@ -80,7 +80,7 @@
           </div>
         </div>
       </a>
-      <a href="2021/watch_out/index.html">
+      <a href="2021/watch_out/">
         <div class="highlight-project">
           <img class="gallery" src="2021/watch_out/2021_WatchOut_1.jpg" alt="">
           <div class="text-box">
@@ -89,7 +89,7 @@
           </div>
         </div>
       </a>
-      <a href="2021/sunrisepunk/index.html">
+      <a href="2021/sunrisepunk/">
         <div class="highlight-project">
           <img class="gallery" src="2021/sunrisepunk/2021_Sunrisepunk_4.jpg" alt="">
           <div class="text-box">
@@ -98,7 +98,7 @@
           </div>
         </div>
       </a>
-      <a href="2021/blue_odyssey/index.html">
+      <a href="2021/blue_odyssey/">
         <div class="highlight-project">
           <img class="gallery" src="2021/blue_odyssey/2021_BlueOdyssey_1.jpg" alt="">
           <div class="text-box">
@@ -107,7 +107,7 @@
           </div>
         </div>
       </a>
-      <a href="2020/clandestine_cult/index.html">
+      <a href="2020/clandestine_cult/">
         <div class="highlight-project">
           <img class="gallery" src="2020/clandestine_cult/2020_ClandestineCult_6.jpg" alt="">
           <div class="text-box">
@@ -116,7 +116,7 @@
           </div>
         </div>
       </a>
-      <a href="2018/space_jellyfish/index.html">
+      <a href="2018/space_jellyfish/">
         <div class="highlight-project">
           <img class="gallery" src="2018/space_jellyfish/2018_SpaceJellyfish_Cover.jpg" alt="2018_SpaceJellyfish_Cover">
           <div class="text-box">
@@ -125,7 +125,7 @@
           </div>
         </div>
       </a>
-      <a href="2017/m302/index.html">
+      <a href="2017/m302/">
         <div class="highlight-project">
           <img class="gallery" src="2017/m302/2017_M302_Cover.jpg" alt="2017_M302_Cover">
           <div class="text-box">
