--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <div class="logo"><a href="index.html"><img src="assets/logo.svg" alt=""></a></div>
       <div class="openMenu"><img src="assets/add_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div>
       <ul class="mainMenu">
-        <li><a href="/art">Art</a></li>
-        <li><a href="/design">Design</a></li>
-        <li><a href="/about">About</a></li>
+        <li><a href="/art/">Art</a></li>
+        <li><a href="/design/">Design</a></li>
+        <li><a href="/about/">About</a></li>
         <li>
           <a href="mailto:tino.selic@gmail.com" target="_blank"></a>
           <div class="button" id="contact">Contact</div>
