--- a/about/index.html
+++ b/about/index.html
@@ -49,15 +49,9 @@
           In spring 2019, I participated in the Erasmus+ programme and spent a semester abroad at the University of
           Lapland in Rovaniemi, Finland. During this time, I experienced the beauty of Finland's natural phenomena—the
           northern lights, the polar night, and the midnight sun. Since then, these extraordinary scenarios have been a
-          wonderful source of inspiration for colour and light in my artistic work. Conceptually, I like to explore
+          great source of inspiration for my artistic work. Conceptually, I like to explore
           themes from nature, technology, and human emotions, often weaving narratives from fiction, personal
           experiences, and cultural exchange.
-          <br>
-          <br>
-          My favourite tools are Unreal Engine, Blender, TouchDesigner, and the Adobe Creative Suite (Photoshop,
-          InDesign, Illustrator, Premiere Pro, and After Effects). I am also familiar with programming in Java, C++,
-          HTML,
-          CSS, and JavaScript.
           <br>
           <br>
           I speak German, English, and a bit of Finnish.
@@ -136,6 +130,60 @@
         <br>
         <br>
         <br> -->
+      </div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <div class="row" style="padding-top: 0px;">
+      <div class="about-column-left">
+        <h1>Legal Notice</h1>
+        <br>
+        <br>
+        <p>
+          Tino Selic assumes no liability for the completeness, timeliness, or quality of the information provided, for
+          editorial or technical errors, omissions, or the accuracy of the entries. Liability claims against Tino Selic
+          relating to material or immaterial damage caused by the use of the information provided or the use of
+          incorrect
+          or incomplete information are fundamentally excluded, unless Tino Selic is guilty of willful intent or gross
+          negligence. All information and offers presented here are non-binding and subject to change.
+          <br>
+          <br>
+          Tino Selic reserves the right to make changes to parts or the entire content of the pages at any time, to add
+          to
+          them in part, to remove them, or to permanently discontinue them. As soon as Tino Selic becomes aware of
+          illegal
+          content on his own website, he will remove such content, provided this is technically possible and reasonable.
+          In particular, Tino Selic cannot guarantee the accuracy and completeness of information accessed via links.
+          Links to websites outside the publisher's own website are for information purposes only. Tino Selic assumes no
+          responsibility for such external content. Responsibility for such external content lies with the providers of
+          these linked websites.
+          <br>
+          <br>
+          When creating this website and establishing links to the websites of external providers, these websites were
+          carefully checked for illegal content. It is expressly emphasized that Tino Selic has no influence on the
+          design
+          and content of the content accessible from Tino Selic's website, that the content of the linked websites can
+          be
+          changed without Tino Selic's knowledge, and that he has no influence on the future design, content, or
+          authorship of the linked website.
+          <br>
+          <br>
+          Tino Selic distances himself from all content of linked/connected websites that has been changed after the
+          link
+          was created. Tino Selic also assumes no liability for content accessible via hyperlinks on the linked website.
+          The above disclaimer applies accordingly to such websites. Unless otherwise stated, the copyright for all
+          image
+          and audio materials used rests with Tino Selic. Trademarks mentioned or protected by third parties are subject
+          to the applicable provisions of trademark law and the ownership rights of the respective registered owners.
+          Reproduction or use of the graphics, images, or texts published here in other electronic or printed
+          publications
+          is not permitted without the prior written consent of Tino Selic. Should sections or individual formulations
+          of
+          this disclaimer not, no longer, or not completely comply with applicable law, the content and validity of the
+          remaining parts of this text remain unaffected.
+        </p>
       </div>
     </div>
   </main>
