--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <header>
     <nav id="home">
-      <div class="logo"><a href="index.html"><img src="assets/logo.svg" alt=""></a></div>
+      <div class="logo"><a href="./"><img src="assets/logo.svg" alt=""></a></div>
       <div class="openMenu"><img src="assets/add_FILL0_wght400_GRAD0_opsz24.svg" alt=""></div>
       <ul class="mainMenu">
         <li><a href="/art/">Art</a></li>
@@ -23,7 +23,6 @@
           <a href="mailto:tino.selic@gmail.com" target="_blank"></a>
           <div class="button" id="contact">Contact</div>
         </li>
-        <div class="closeMenu"><img src="assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
     </nav>
   </header>
