--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,6 @@
           <a href="mailto:tino.selic@gmail.com" target="_blank"></a>
           <div class="button" id="contact">Contact</div>
         </li>
-        <div class="closeMenu"><img src="/assets/close_FILL0_wght400_GRAD0_opsz48.svg" alt=""></div>
       </ul>
     </nav>
   </header>
@@ -63,12 +62,13 @@
           Contact me: <a href="mailto:tino.selic@gmail.com">tino.selic@gmail.com</a>
         </h2>
       </div>
-      <!-- <div class="about-column-right">
-        <img src="/assets/Adungu_Isolated.png" alt="Adungo background sticker" id="adungu">
         <br>
         <br>
-        <img src="/assets/Engoma_Isolated.png" alt="Adungo background sticker" id="engoma">
-      </div> -->
+        <br>
+        <br>
+      <div class="about-column-right">
+        <img src="/images/20250309_TS.jpg" alt="Tino Selic, 2022">
+      </div>
     </div>
     <br>
     <br>
@@ -125,11 +125,6 @@
       </div>
       <div class="about-column-right">
         </h2>
-        <!-- <img src="/images/202208_TS_Portrait.jpg" alt="Tino Selic, 2022">
-        <br>
-        <br>
-        <br>
-        <br> -->
       </div>
     </div>
     <br>
