Links added to home quote, about layout edited.

--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
       </video>
     </div>
     <div class="quote">
-      Tino Selic is a Helsinki-based digital artist and designer.
+      Tino Selic is a Helsinki-based digital <a href="/art/"
+        style="font-family: inherit; font-size: inherit; text-decoration-thickness: 4px; text-underline-offset: 8px;">artist</a>
+      and <a href="/design/" style="font-family: inherit; font-size: inherit; text-decoration-thickness: 4px; text-underline-offset: 8px;">designer</a>.
     </div>
   </main>
-  <footer id="copyright" style="
+  <footer id=" copyright" style="
   position: absolute;
-  top: 90%;
+  top: 70%;
   left: 50%;
-  transform: translate(-50%, -50%);"></footer>
-  <script src="app.js"></script>
+  transform: translate(-50%, -70%);"></footer>
+        <script src="app.js"></script>
 </body>
 
 </html>
