2025_lo-fi-mic added.

--- a/art/index.html
+++ b/art/index.html
@@ -25,6 +25,15 @@
   </header>
   <main>
     <div class="grid">
+      <a href="2025/lo-fi_mic/">
+        <div class="highlight-project">
+          <img class="gallery" src="2025/lo-fi_mic/2025_lo-fi-mic_cover.jpg" alt="2025_lo-fi-mic_cover">
+          <div class="text-box">
+            <div class="project-title">Lo-fi Mic</div>
+            <div class="project-subtitle">DIY Audio Project<br>2025</div>
+          </div>
+        </div>
+      </a>
       <a href="2024/aurora/">
         <div class="highlight-project">
           <img class="gallery" src="2024//aurora/2024_AURORA_Cover.jpg" alt="2024_AURORA_Cover">
